# minishell

./: .gitignore  1  2  3  4  CMakeLists.txt  Makefile  main.c
buildins/: export.c  export_utils.c  ft_cd.c  ft_cd_utils.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
includes/: minishell.h
libft/: Makefile  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstfind.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstremove.c  ft_lstsize.c  ft_putendl_fd.c  ft_split.c  ft_strisalpha.c  ft_strisdigit.c  libft.h
parse/: cmd_parse.c  cmd_parse_utils.c  dir_parse.c  dollar.c  lists.c  parser.c  parser_utils.c  preparse.c  preparse_utils.c
pipe/: first_last_com.c  first_middle_last.c  functions_for_direct.c  pipe_for_another.c  pipe_for_two.c  pipe_main.c
printf/: Makefile  add_functions.c  add_functions_2.c  add_functions_3.c  for_char.c  for_digit.c  for_hexadecimal.c  for_pointer.c  for_string.c  for_unsigned.c  ft_printf.c  ft_printf.h  functions_atoi.c  functions_for_write.c  functions_strlen.c  init_struct.c  parsing.c
redirect/: execute_doub_redir.c  functions_for_direct.c  main_function_for_one_direct.c  one_direct.c
signal/: signal.c  signal_for_child.c  signal_for_main.c
srcs/: command_exist.c  init.c  main_work.c  one_direct.c  one_with_direct.c
utils/: about_memory.c  change.c  change_shlvl.c  error.c  find.c  find_and_print.c  free.c  ft_sort_params.c
